# irccd

./: .hgignore  BREAKS  CHANGES  CHANGES.md  CMakeLists.txt  CREDITS  CREDITS.md  INSTALL  INSTALL.md  LICENSE  LICENSE.md  README  README.md  TODO  TODO.md
common/: CMakeLists.txt  Date.cpp  Date.h  Directory.cpp  Directory.h  Dynlib.cpp  Dynlib.h  ElapsedTimer.cpp  ElapsedTimer.h  Filesystem.cpp  Filesystem.h  Ini.cpp  Ini.h  Json.cpp  Json.h  Logger.cpp  Logger.h  OptionParser.cpp  OptionParser.h  Parser.cpp  Parser.h  Signals.h  Singleton.h  Socket.cpp  Socket.h  SocketAddress.cpp  SocketAddress.h  SocketClient.cpp  SocketClient.h  SocketListener.cpp  SocketListener.h  SocketServer.cpp  SocketServer.h  SocketServerInet.cpp  SocketServerInet.h  SocketServerUnix.cpp  SocketServerUnix.h  SocketSsl.cpp  SocketSsl.h  SocketTCP.cpp  (+13 more)
contrib/: CMakeLists.txt  irccd.service
doc/: CMakeLists.txt  config.ld  irccd.1.in  irccd.conf.5.in  irccdctl.1.in  irccdctl.conf.5.in
doc/api/: CMakeLists.txt  index.txt
doc/css/: style.css
doc/doxygen/: Doxyfile.in
doc/examples/: CMakeLists.txt  irccd.conf  irccdctl.conf
doc/guides/: CMakeLists.txt  plugin-antiflood.txt  plugin-ask.txt  plugin-auth.txt  plugin-badwords.txt  plugin-date.txt  plugin-history.txt  plugin-logger.txt  plugin-roulette.txt  socket-guide.txt  user-guide.txt
doc/ldoc/: config.ld
doc/linkify/: CMakeLists.txt  main.cpp
doc/lua/: Logger.luadoc  Parser.luadoc  Plugin.luadoc  Server.luadoc  Util.luadoc
doc/man/: irccd.1.in  irccd.conf.5.in  irccdctl.1.in  irccdctl.conf.5.in
doc/master/: CMakeLists.txt  api.html.in
doc/style/: ldoc.css
doc/template/: ldoc.ltp
doc/templates/: CMakeLists.txt  footer.html  header.html  modules.html  template.html  template.tex
doc/templator/: CMakeLists.txt  main.cpp
irccd/: CMakeLists.txt  CommandQueue.cpp  CommandQueue.h  Converter.cpp  Converter.h  DefCall.cpp  DefCall.h  EventQueue.cpp  EventQueue.h  IO.cpp  IO.h  Identity.h  IrcEvent.cpp  IrcEvent.h  IrcSession.cpp  IrcSession.h  Irccd.cpp  Irccd.h  Js.cpp  Js.h  JsFilesystem.cpp  JsLogger.cpp  JsPlugin.cpp  JsServer.cpp  JsSystem.cpp  JsTimer.cpp  JsUnicode.cpp  JsUtil.cpp  Listener.cpp  Listener.h  Lua.cpp  Lua.h  LuaLogger.cpp  LuaParser.cpp  LuaParser.h  LuaServer.cpp  LuaState.cpp  LuaState.h  LuaUtil.cpp  Luae.cpp  (+57 more)
irccd/Lua/: LuaFS.cpp  LuaFS.h  LuaIrccd.cpp  LuaIrccd.h  LuaLogger.cpp  LuaLogger.h  LuaParser.cpp  LuaParser.h  LuaPipe.cpp  LuaPipe.h  LuaPlugin.cpp  LuaPlugin.h  LuaServer.cpp  LuaServer.h  LuaSocket.cpp  LuaSocket.h  LuaSystem.cpp  LuaSystem.h  LuaThread.cpp  LuaThread.h  LuaUtil.cpp  LuaUtil.h
irccd/command/: CMakeLists.txt  ChannelNotice.cpp  ChannelNotice.h  Command.cmake  Command.cpp  Command.h  CommandChannelNotice.cpp  CommandChannelNotice.h  CommandInvite.cpp  CommandInvite.h  CommandJoin.cpp  CommandJoin.h  CommandKick.cpp  CommandKick.h  CommandMe.cpp  CommandMe.h  CommandMessage.cpp  CommandMessage.h  CommandMode.cpp  CommandMode.h  CommandNames.cpp  CommandNames.h  CommandNick.cpp  CommandNick.h  CommandNotice.cpp  CommandNotice.h  CommandPart.cpp  CommandPart.h  CommandSend.cpp  CommandSend.h  CommandTopic.cpp  CommandTopic.h  CommandUserMode.cpp  CommandUserMode.h  CommandWhois.cpp  CommandWhois.h  Invite.cpp  Invite.h  Join.cpp  Join.h  (+24 more)
irccd/event/: CMakeLists.txt  ChannelNotice.cpp  ChannelNotice.h  Command.h  Connect.cpp  Connect.h  Event.cmake  Event.cpp  Event.h  EventChannelNotice.cpp  EventChannelNotice.h  EventConnect.cpp  EventConnect.h  EventInvite.cpp  EventInvite.h  EventJoin.cpp  EventJoin.h  EventKick.cpp  EventKick.h  EventMe.cpp  EventMe.h  EventMessage.cpp  EventMessage.h  EventMode.cpp  EventMode.h  EventNames.cpp  EventNames.h  EventNick.cpp  EventNick.h  EventNotice.cpp  EventNotice.h  EventPart.cpp  EventPart.h  EventQuery.cpp  EventQuery.h  EventTopic.cpp  EventTopic.h  EventUserMode.cpp  EventUserMode.h  EventWhois.cpp  (+67 more)
irccd/js/: Js.cmake  Js.cpp  Js.h  JsFilesystem.cpp  JsLogger.cpp  JsServer.cpp  JsSystem.cpp  JsTimer.cpp  JsUtf8.cpp  Plugin.cpp  Plugin.h  System.cpp  Utf8.h
irccd/lua/: CMakeLists.txt  Lua.cmake  LuaFS.cpp  LuaFS.h  LuaIrccd.cpp  LuaIrccd.h  LuaLogger.cpp  LuaLogger.h  LuaParser.cpp  LuaParser.h  LuaPipe.cpp  LuaPipe.h  LuaPlugin.cpp  LuaPlugin.h  LuaRule.cpp  LuaRule.h  LuaServer.cpp  LuaServer.h  LuaSocket.cpp  LuaSocket.h  LuaSystem.cpp  LuaSystem.h  LuaThread.cpp  LuaThread.h  LuaTimer.cpp  LuaTimer.h  LuaUtf8.cpp  LuaUtf8.h  LuaUtil.cpp  LuaUtil.h
irccd/modules/: CMakeLists.txt  antiflood.lua  ask.lua  badwords.lua  history.lua  logger.lua
irccd/plugins/: CMakeLists.txt  antiflood.lua  ask.lua  auth.lua  badwords.lua  date.lua  history.lua  logger.lua  plugin.lua  roulette.lua
irccd/server/: CMakeLists.txt  Connected.cpp  Connected.h  Connecting.cpp  Connecting.h  Disconnected.cpp  Disconnected.h  Running.cpp  Running.h  Server.cmake  ServerConnecting.cpp  ServerConnecting.h  ServerDead.cpp  ServerDead.h  ServerDisconnected.cpp  ServerDisconnected.h  ServerRunning.cpp  ServerRunning.h  ServerState.cpp  ServerState.h  ServerUninitialized.cpp  ServerUninitialized.h  Uninitialized.cpp  Uninitialized.h  Waiting.cpp  Waiting.h
irccd/servercommand/: ChannelNotice.cpp  ChannelNotice.h  Invite.cpp  Invite.h  Join.cpp  Kick.cpp  Kick.h  Me.h  Message.cpp  Mode.cpp  Mode.h  Names.cpp  Names.h  Nick.cpp  Nick.h  Notice.h  Part.cpp  Part.h  Send.h  ServerCommand.cmake  Topic.cpp  UserMode.cpp  UserMode.h
irccd/serverevent/: ChannelNotice.cpp  ChannelNotice.h  Command.cpp  Command.h  Connect.cpp  Connect.h  Invite.cpp  Invite.h  Join.cpp  Join.h  Kick.cpp  Kick.h  Me.cpp  Me.h  Message.cpp  Message.h  Mode.cpp  Mode.h  Names.cpp  Names.h  Nick.cpp  Nick.h  Notice.cpp  Notice.h  Part.cpp  Part.h  Query.cpp  Query.h  ServerEvent.cmake  Topic.cpp  Topic.h  UserMode.cpp  UserMode.h  Whois.cpp  Whois.h
irccd/serverstate/: Connected.cpp  Connecting.cpp  (+5 more)
plugins/: CMakeLists.txt  antiflood.lua  auth.lua  badwords.lua  history.lua  logger.lua  plugin.lua  reminder.lua  roulette.lua
tests/: CMakeLists.txt  TestParser.cpp  TestParser.h
(+456 files in other folders)
